# sc-neurocore

./: .gitignore  CITATION.cff  CITATION_v37.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README_v37.md
bridge/: __init__.py  pyproject.toml
bridge/sc_neurocore_engine/: __init__.py  attention.py  compat.py  grad.py  graphs.py  hdc.py  ir.py  layers.py  neurons.py  petri_net.py  sc_neurocore_engine.cp312-win_amd64.pyd  scpn.py
cosim/: conftest.py  test_encoder_cosim.py  test_lif_cosim.py  test_synapse_cosim.py
docs/: NEURO_SYMBOLIC_LOGIC_COMPILER_ARCHITECTURE.md  PACKET_C_CONTROL_API_COMPREHENSIVE_STUDY.md  SC_NEUROCORE_V3.7_POLYMORPHIC_ENGINE_STUDY.md
engine/: Cargo.toml
engine/benches/: bitstream_bench.rs  full_bench.rs
engine/src/: attention.rs  bitstream.rs  encoder.rs  graph.rs  layer.rs  lib.rs  neuron.rs
engine/src/grad/: mod.rs  surrogate.rs
engine/src/ir/: builder.rs  emit_sv.rs  graph.rs  mod.rs  parser.rs  printer.rs  verify.rs
engine/src/scpn/: kuramoto.rs  metrics.rs  mod.rs
engine/src/simd/: avx2.rs  avx512.rs  mod.rs  neon.rs
engine/tests/: equivalence.rs  prop_bitstream.rs  prop_kuramoto.rs  prop_layer.rs  prop_neuron.rs  test_emit_sv.rs  test_hdc.rs  test_ir.rs  test_ir_bridge.rs  test_kuramoto.rs  test_kuramoto_ssgf.rs  test_surrogate.rs
examples/: 01_basic_sc_encoding.py  01_sc_training_demo.py  02_ir_compile_demo.py  02_sc_neuron_layer.py  03_benchmark_report.py  03_vectorized_layer.py  04_scpn_stack.py  05_hdl_generation.py  06_ensemble_consensus.py  06_hdc_symbolic_query.py  07_safety_critical_logic.py
notebooks/: 01_hdc_symbolic_query.ipynb  02_fault_tolerant_logic.ipynb
tests/: conftest.py  test_advanced_layers.py  test_batch_ops.py  test_behavioral_equivalence.py  test_core_modules.py  test_coverage_gaps.py  test_dense_optimization.py  test_final_coverage.py  test_frontiers.py  test_gnn_sc_mode.py  test_gpu_backend.py  test_hardware_interface.py  test_hdc_python.py  test_integration.py  test_ir_python.py  test_kuramoto_python.py  test_kuramoto_ssgf_python.py  test_meta_computing.py  test_microtubule_superradiance.py  test_multihead_attention.py  test_neurons.py  test_numpy_interop.py  test_petri_net.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase8.py  test_phase9.py  test_pynq_driver.py  test_remaining_coverage.py  test_research_modules.py  test_scpn_l1_basic.py  test_security.py  test_sources_and_profiling.py  test_surrogate_python.py  test_synapses.py  test_synapses_stdp.py  (+5 more)
(+50 files in other folders)
