# CopyRight: (c) 1998-2026 Miroslav Sotek. All rights reserved.
# Contact us: www.anulum.li  protoscience@anulum.li
# ORCID: https://orcid.org/0009-0009-3560-0851
# License: GNU AFFERO GENERAL PUBLIC LICENSE v3
# Commercial Licensing: Available

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "sc_neurocore_engine"
version = "3.7.0"
requires-python = ">=3.9"
description = "High-performance Rust backend for SC-NeuroCore"
license = {text = "MIT"}
authors = [{name = "Miroslav Sotek", email = "fortisstudio@gmail.com"}]

[tool.maturin]
manifest-path = "../engine/Cargo.toml"
python-source = "."
module-name = "sc_neurocore_engine.sc_neurocore_engine"

